<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.WelcomePage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/illustration"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="bottom"
            android:background="@drawable/background_welcome" />

        <Button
            android:id="@+id/signup_home_btn"
            android:layout_width="212dp"
            android:layout_height="45dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="180dp"
            android:background="@drawable/button_shape_signup"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login_home_btn"
            android:layout_width="212dp"
            android:layout_height="45dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="105dp"
            android:background="@drawable/button_shape_login"
            android:text="@string/login"
            android:textColor="@color/colorSecondary" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>