<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SignupWithEmail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/background_signup_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/login_with_email"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/login_email_progress_bar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center|bottom"/>

        </FrameLayout>

        <!-- FORM -->

        <!-- Email -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textColor="@color/colorTextInForm"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <EditText
            android:id="@+id/input_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <!-- Password -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/colorTextInForm"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_login_email" />

        <EditText
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageButton
            android:id="@+id/show_password_login_btn"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitXY"
            android:src="@drawable/icon_show_pass"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@+id/input_login_password"
            app:layout_constraintTop_toTopOf="@+id/input_login_password" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="154dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape_primary"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_login_password" />

        <TextView
            android:id="@+id/google_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/google_account"
            android:textColor="@color/colorSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>